--- a/package.json
+++ b/package.json
@@ -41,5 +41,10 @@
     "@types/react-dom": "^17.0.14",
     "@types/styled-components": "^5.1.24",
     "typescript": "^4.6.3"
+  },
+  "workspaces": {
+    "packages": [
+      "server"
+    ]
   }
 }
